--- a/myCrudApp/src/main/resources/hibernate.properties
+++ b/myCrudApp/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
 # Config Data Source for Hibernate
 hibernate.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5432/myHibernateDB
-hibernate.connection.username=postgres
-hibernate.connection.password=12345
+hibernate.connection.url=database.url
+hibernate.connection.username=database.username_value
+hibernate.connection.password=database.userpass_value
 
 # Config Hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
